--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
@@ -13,19 +9,32 @@
   }
 }
 
-.App-header {
+.App-header {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.App {
+  text-align: center;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+  list-style-type: none;
+  width: 40%;
+}
+
+.row {
+  background-color: red;
+  display: flex;
+  justify-content: space-between;
 }
 
 @keyframes App-logo-spin {
